--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Cantus.us</a>
+        <a class="navbar-brand" href="#">Sable Cantus</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,20 +41,6 @@
       </div>
     </nav>
 
-    <!--header class="masthead text-center text-white">
-      <div class="masthead-content">
-        <div class="container">
-          <h1 class="masthead-heading mb-0">One Page Wonder</h1>
-          <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
-          <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
-        </div>
-      </div>
-      <div class="bg-circle-1 bg-circle"></div>
-      <div class="bg-circle-2 bg-circle"></div>
-      <div class="bg-circle-3 bg-circle"></div>
-      <div class="bg-circle-4 bg-circle"></div>
-    </header-->
-
     <section>
       <div class="container">
         <div class="row align-items-center">
@@ -67,6 +53,7 @@
             <div class="p-5">
               <h2 class="display-4">About</h2>
 	      <p>I am a musician and audio engineer in Orange County, CA. You can find me playing various instruments, working on podcasts, parody songs, demo recordings, or other creative projects.</p>
+	      <p>You can find me on <a href="https://twitter.com/sablecantus" target="__blank">Twitter</a></p>
             </div>
           </div>
         </div>
