--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">About</h2>
-	      <p>I am a musician and audio engineer in Orange County, CA. You can find me playing various instruments, working on podcasts, parody songs, demo recordings, or other creative projects.</p>
-	      <p>You can find me on <a href="https://twitter.com/sablecantus" target="__blank">Twitter</a></p>
+	      <p>I am a musician and audio engineer in Orange County, CA. You can find me playing guitar, trombone, working on podcasts, parody songs, demo recordings, or other creative projects.</p>
+	      <p>Message me on <a href="https://twitter.com/sablecantus" target="__blank">Twitter</a></p>
             </div>
           </div>
         </div>
