added twitter badge

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Personal website for Sable Cantus">
+    <meta name="author" content="Sable Cantus">
 
     <title>Sable Cantus</title>
 
@@ -33,9 +33,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <!--li class="nav-item">
-              <a class="nav-link" href="#"></a>
-            </li-->
+            <li class="nav-item">
+              <a class="nav-link" href="#"> <a href="https://twitter.com/sablecantus" target="__blank"><img src="img/twitter.png" height=30></a></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -53,7 +53,6 @@
             <div class="p-5">
               <h2 class="display-4">About</h2>
 	      <p>I am a musician and audio engineer in Orange County, CA. You can find me playing guitar, trombone, working on podcasts, parody songs, demo recordings, or other creative projects.</p>
-	      <p>Message me on <a href="https://twitter.com/sablecantus" target="__blank">Twitter</a></p>
             </div>
           </div>
         </div>
