added footer note

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
-        <p class="m-0 text-center text-white small">Copyright &copy; 2018 Sable Cantus. All Rights Reserved.</p>
+        <p class="m-0 text-center text-white small">Copyright &copy; 2018 Sable Cantus. All Rights Reserved. <a href="https://github.com/sc137" target="_blank">Git more</a>.</p>
       </div>
       <!-- /.container -->
     </footer>
