--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Sable Cantus</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="#"> <a href="https://twitter.com/sablecantus" target="__blank"><img src="img/twitter.png" height=30></a></a>
+            </li>
+			<p>&nbsp;&nbsp;</p>
+            <li class="nav-item">
+			  <a class="nav-link" href="#"> <a href="http://sc137.github.io/tippy/" target="__blank"><img src="img/tippy.png" height=30 title="Give good tips with Tippy!"></a></a>
             </li>
           </ul>
         </div>
@@ -98,7 +102,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
-        <p class="m-0 text-center text-white small">Copyright &copy; 2018 Sable Cantus. All Rights Reserved. <a href="https://github.com/sc137" target="_blank">Git more</a>.</p>
+        <p class="m-0 text-center text-white small">Copyright &copy; 2018 Sable Cantus. All Rights Reserved. </p>
       </div>
       <!-- /.container -->
     </footer>
