shades of gray (icons)

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"> <a href="https://twitter.com/sablecantus" target="__blank"><img src="img/twitter.png" height=30></a></a>
+              <a class="nav-link" href="#"> <a href="https://twitter.com/sablecantus" target="__blank"><img src="img/twitter.png" height=30 style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a></a>
             </li>
 			<p>&nbsp;&nbsp;</p>
             <li class="nav-item">
-			  <a class="nav-link" href="#"> <a href="http://sc137.github.io/tippy/" target="__blank"><img src="img/tippy.png" height=30 title="Give good tips with Tippy!"></a></a>
+			  <a class="nav-link" href="#"> <a href="http://sc137.github.io/tippy/" target="__blank"><img src="img/tippy.png" height=30 title="Give good tips with Tippy!" style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a></a>
             </li>
           </ul>
         </div>
