changed guitar pic

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/sable-gtr.jpg" alt="">
+              <img class="img-fluid rounded-circle" src="img/sable-strat.png" alt="sable playing guitar" title="sable playing his hot-rodded creamy strat">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
@@ -86,7 +86,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/klez.jpg" alt="">
+              <img class="img-fluid rounded-circle" src="img/klez.jpg" alt="the south coast simcha band" title="Check out our klezmer band - the South Coast Simcha Band!">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
