--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"> <a href="https://twitter.com/sablecantus" target="__blank"><img src="img/twitter.png" height=30 style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a></a>
+              <a class="nav-link" href="#"> <a href="https://twitter.com/sablecantus" target="_blank"><img src="img/twitter.png" alt="twitter logo" height=30 style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a></a>
+            &nbsp;&nbsp;
             </li>
-			<p>&nbsp;&nbsp;</p>
+			
             <li class="nav-item">
-			  <a class="nav-link" href="#"> <a href="http://sc137.github.io/tippy/" target="__blank"><img src="img/tippy.png" height=30 title="Give good tips with Tippy!" style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a></a>
+			  <a class="nav-link" href="#"> <a href="http://sc137.github.io/tippy/" target="_blank"><img src="img/tippy.png" alt="tippy logo" height=30 title="Give good tips with Tippy!" style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a></a>
             </li>
           </ul>
         </div>
@@ -74,7 +75,7 @@
           <div class="col-lg-6">
             <div class="p-5">
               <h2 class="display-4">Sarcastic Ladyland</h2>
-	      <p>Please check out some of my parody work <a href="https://sablecantus.bandcamp.com/album/sarcastic-ladyland" target="__blank">on bandcamp</a> </p>
+	      <p>Please check out some of my parody work <a href="https://sablecantus.bandcamp.com/album/sarcastic-ladyland" target="_blank">on bandcamp</a> </p>
             </div>
           </div>
         </div>
@@ -92,7 +93,7 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">Klezmer!</h2>
-	      <p>I play trombone with the South Coast Simcha Band! You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="__blank">Facebook</a></p>
+	      <p>I play trombone with the South Coast Simcha Band! You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="_blank">Facebook</a></p>
             </div>
           </div>
         </div>
