updating scales iframe html

--- a/scores/jewish_scales.html
+++ b/scores/jewish_scales.html
@@ -1,1 +1,21 @@
-<iframe src="https://sibl.pub/r1GU2j4_f" width="800" height="1055" frameborder="0" allowfullscreen></iframe>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Style-Type" content="text/css" />
+  <title>cantus.us</title>
+  <link rel="stylesheet" href="../posts/_resources/template.css" />
+</head>
+<body>
+    <div class="navbar navbar-static-top">
+        <div class="navbar-inner">
+            <div class="container">
+        
+            <iframe src="https://sibl.pub/r1GU2j4_f" width="1024" height="740" frameborder="0" allowfullscreen></iframe>
+
+            </div>
+        </div>
+    </div>
+  </div>
+</body>
+</html>
