--- a/certs.html
+++ b/certs.html
@@ -109,10 +109,7 @@
 <li>Modules 1 - 4: 1/17 - 1/18 2013</li>
 <li>Modules 5 - 6: 9/20/2013</li>
 </ul>
-<h3 id="comptia-a">CompTIA A+</h3>
-<ul>
-<li>220-301 A+ Linear Core Hardware Exam (Good For Life) certification</li>
-</ul>
+<h3 id="comptia-a-core-hardware-220-301">CompTIA A+ Core Hardware (220-301)</h3>
             </div>
     </div>
   </div>
