--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <section>
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6 order-lg-2">
-            <div class="p-5">
+          <div class="col-lg-8 order-lg-2">
+            <div class="">
               <img class="img-fluid rounded-circle" src="img/sable-strat.png" alt="sable playing guitar" title="sable playing his hot-rodded creamy strat">
             </div>
           </div>
@@ -98,6 +98,18 @@
           </div>
         </div>
       </div>
+    </section>
+    
+    <section>
+        <div class="container">
+            <div class="row align-items-left">
+                <div class="order-lg-2">
+                    <div class="p-5"><h3>Très L.A. cocktail band.</h3>
+            <p>I've joined my pals for some local cocktail / restaurant / background entertainment. <a href="https://sc137.github.io/treslaband/" target="_blank">Check that out over here.</a></p>
+            </div>
+            </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
