fixed wonky html

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"> <a href="https://twitter.com/sablecantus" target="_blank"><img src="img/twitter.png" alt="twitter logo" height=30 style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a></a>
+              <a class="nav-link" href="#"> </a><a href="https://twitter.com/sablecantus" target="_blank"><img src="img/twitter.png" alt="twitter logo" height="30" style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a>
             &nbsp;&nbsp;
             </li>
 			
             <li class="nav-item">
-			  <a class="nav-link" href="#"> <a href="http://sc137.github.io/tippy/" target="_blank"><img src="img/tippy.png" alt="tippy logo" height=30 title="Give good tips with Tippy!" style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a></a>
+			  <a class="nav-link" href="#"></a> <a href="http://sc137.github.io/tippy/" target="_blank"><img src="img/tippy.png" alt="tippy logo" height="30" title="Give good tips with Tippy!" style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a>
             </li>
           </ul>
         </div>
@@ -49,8 +49,8 @@
     <section>
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-8 order-lg-2">
-            <div class="">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
               <img class="img-fluid rounded-circle" src="img/sable-strat.png" alt="sable playing guitar" title="sable playing his hot-rodded creamy strat">
             </div>
           </div>
@@ -93,24 +93,29 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">Klezmer!</h2>
-	      <p>I play trombone with the South Coast Simcha Band! You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="_blank">Facebook</a></p>
-            </div>
+	      <p>I play trombone with the South Coast Simcha Band! You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="_blank">Facebook</a></p> </div>
           </div>
         </div>
       </div>
     </section>
     
-    <section>
-        <div class="container">
-            <div class="row align-items-left">
-                <div class="order-lg-2">
-                    <div class="p-5"><h3>Très L.A. cocktail band.</h3>
-            <p>I've joined my pals for some local cocktail / restaurant / background entertainment. <a href="https://sc137.github.io/treslaband/" target="_blank">Check that out over here.</a></p>
+        <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-12 order-lg-12">
+            <div class="p-5">
             </div>
-            </div>
-            </div>
+          </div>
+          <div class="col-lg-12 order-lg-12">
+            <div class="p-5">
+              <h3 class="display-4">Très L.A. cocktail band</h3>
+<p>I've joined my pals for some local cocktail / restaurant / background entertainment. <a href="https://sc137.github.io/treslaband" target="_blank">Check that out over here.</a></p>
+	      </div>
+          </div>
         </div>
+      </div>
     </section>
+
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
