--- a/certs.html
+++ b/certs.html
@@ -20,18 +20,25 @@
         border: 1px solid #021a40;
     }
     h1 {
-        text-decoration: underline;
     }
     </style>
 <h1 id="my-recent-training-and-certificates">My Recent Training and Certificates</h1>
-<h3 id="candidate-certified-information-systems-security-professional-cissp">Candidate: Certified Information Systems Security Professional (CISSP)</h3>
+<hr />
+<h3 id="certified-information-systems-security-professional-cissp">Certified Information Systems Security Professional (CISSP)</h3>
 <ul>
-<li>Exam passed 5/30/18, Certification #657467</li>
+<li>7/3/2018 #657467</li>
 <li>(ISC)2</li>
 </ul>
-<h3 id="certificate-of-completion-understanding-cisco-cybersecurity-fundamentals">Certificate of Completion: Understanding Cisco Cybersecurity Fundamentals</h3>
+<p><img src="img/CISSP-logo-2lines.jpg" width=250px></p>
+<h3 id="cisco-networking-academy-connecting-things">Cisco Networking Academy Connecting Things</h3>
 <ul>
-<li>Certificate</li>
+<li>Certificate of Completion, Certified Instructor</li>
+<li>June 22, 2018</li>
+<li>36 hours</li>
+</ul>
+<h3 id="understanding-cisco-cybersecurity-fundamentals">Understanding Cisco Cybersecurity Fundamentals</h3>
+<ul>
+<li>Certificate of Completion</li>
 <li>May 2018</li>
 </ul>
 <h3 id="bie-project-based-learning">BIE Project Based Learning</h3>
@@ -109,7 +116,6 @@
 <li>Modules 1 - 4: 1/17 - 1/18 2013</li>
 <li>Modules 5 - 6: 9/20/2013</li>
 </ul>
-<h3 id="comptia-a-core-hardware-220-301">CompTIA A+ Core Hardware (220-301)</h3>
             </div>
     </div>
   </div>
