found my aca logo

--- a/certs.html
+++ b/certs.html
@@ -89,6 +89,7 @@
 <li>Certificate</li>
 <li>3/8/15</li>
 </ul>
+<p><img src="img/adobe-certified-associate-in-visual-communication-using-adobe-photoshop.png" width="125" /></p>
 <h3 id="enhancing-basic-skills-across-the-curriculum">Enhancing Basic Skills Across the Curriculum</h3>
 <ul>
 <li>6 hours</li>
