--- a/certs.html
+++ b/certs.html
@@ -30,6 +30,11 @@
 <li>(ISC)2</li>
 </ul>
 <p><img src="img/CISSP-logo-2lines.jpg" width=250px></p>
+<h3 id="understanding-cisco-cybersecurity-operations">Understanding Cisco Cybersecurity Operations</h3>
+<ul>
+<li>Certificate of Completion</li>
+<li>July 2018</li>
+</ul>
 <h3 id="cisco-networking-academy-connecting-things">Cisco Networking Academy Connecting Things</h3>
 <ul>
 <li>Certificate of Completion, Certified Instructor</li>
