--- a/certs.html
+++ b/certs.html
@@ -29,20 +29,22 @@
 <li>7/3/2018 #657467</li>
 <li>(ISC)2</li>
 </ul>
-<p><img src="img/CISSP-logo-2lines.jpg" width=250px></p>
+<p><a href="https://www.youracclaim.com/badges/b95d6824-708f-4617-9473-8f80d5c67cde/public_url" target="__blank"><img src="img/CISSP-logo-2lines.jpg" width=250px></a></p>
 <h3 id="understanding-cisco-cybersecurity-operations">Understanding Cisco Cybersecurity Operations</h3>
 <ul>
+<li>100 hours</li>
 <li>Certificate of Completion</li>
 <li>July 2018</li>
 </ul>
 <h3 id="cisco-networking-academy-connecting-things">Cisco Networking Academy Connecting Things</h3>
 <ul>
 <li>Certificate of Completion, Certified Instructor</li>
-<li>June 22, 2018</li>
+<li>June 2018</li>
 <li>36 hours</li>
 </ul>
 <h3 id="understanding-cisco-cybersecurity-fundamentals">Understanding Cisco Cybersecurity Fundamentals</h3>
 <ul>
+<li>100 hours</li>
 <li>Certificate of Completion</li>
 <li>May 2018</li>
 </ul>
