changed band name

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="col-lg-12 order-lg-12">
             <div class="p-5">
-              <h3 class="display-4">Très L.A. cocktail band</h3>
+              <h3 class="display-4">Très O.C. cocktail band</h3>
 <p>I've joined my pals for some local cocktail / restaurant / background entertainment. <a href="https://sc137.github.io/treslaband" target="_blank">Check that out over here.</a></p>
 	      </div>
           </div>
