--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="col-lg-12 order-lg-12">
             <div class="p-5">
               <h3 class="display-4">Très O.C. cocktail band</h3>
-<p>I've joined my pals for some local cocktail / restaurant / background entertainment. <a href="https://sc137.github.io/treslaband" target="_blank">Check that out over here.</a></p>
+<p>I've joined my pals for some local cocktail / restaurant / background entertainment. <a href="https://sc137.github.io/tresocband" target="_blank">Check that out over here.</a></p>
 	      </div>
           </div>
         </div>
