--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">Klezmer!</h2>
-	      <p>I play trombone with the South Coast Simcha Band! You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="_blank">Facebook</a></p> </div>
+  <p>I play trombone with the South Coast Simcha Band! You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="_blank">Facebook</a><br /><br />We would <strong>love</strong> to play Klezmer for your simcha, bar mitzvah, or other temple event!</p> </div>
           </div>
         </div>
       </div>
@@ -106,11 +106,11 @@
             <div class="p-5">
             </div>
           </div>
-          <div class="col-lg-12 order-lg-12">
+          <!-- div class="col-lg-12 order-lg-12">
             <div class="p-5">
               <h3 class="display-4">Très O.C. cocktail band</h3>
 <p>I've joined my pals for some local cocktail / restaurant / background entertainment. <a href="https://sc137.github.io/tresocband" target="_blank">Check that out over here.</a></p>
-	      </div>
+	      </div-->
           </div>
         </div>
       </div>
