added beach pic

--- a/index.html
+++ b/index.html
@@ -102,20 +102,21 @@
         <section>
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-12 order-lg-12">
+          <div class="col-lg-6">
             <div class="p-5">
+              <img class="img-fluid rounded-circle" src="img/beach.jpg" alt="">
             </div>
           </div>
-          <!-- div class="col-lg-12 order-lg-12">
+          <div class="col-lg-6">
             <div class="p-5">
-              <h3 class="display-4">Très O.C. cocktail band</h3>
-<p>I've joined my pals for some local cocktail / restaurant / background entertainment. <a href="https://sc137.github.io/tresocband" target="_blank">Check that out over here.</a></p>
-	      </div-->
+	      <p>Playing acoustic guitar at the beach.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
-
+    
+        
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
