--- a/rio/index.html
+++ b/rio/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE html">
 <html>
 <head>
 <title>Teaching Demo for Rio Hondo College</title>
