--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
     </nav>
 
     <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-10 offset-1.5 order-lg-1">
+                    <div class="p-5">
+                    <h2 class="display-4"><br />Upcoming Concert</h2>
+                    <img src="img/jor-poster.jpg" width="90%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
@@ -57,13 +70,13 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">About</h2>
-	      <p>I am a musician and audio engineer in Orange County, CA. You can find me playing guitar, trombone, working on podcasts, parody songs, demo recordings, or other creative projects.</p>
+	      <p>I am a musician in Orange County, CA. You can find me playing guitar, trombone, working on podcasts, parody songs, demo recordings, or other creative projects.</p>
             </div>
           </div>
         </div>
       </div>
     </section>
-
+    
     <section>
       <div class="container">
         <div class="row align-items-center">
