adding the fashion island photo

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/beach.jpg" alt="">
+              <img class="img-fluid rounded-circle" src="img/beach.jpg" alt="sable and nancy singing and playing">
             </div>
           </div>
           <div class="col-lg-6">
@@ -129,6 +129,22 @@
       </div>
     </section>
     
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" src="img/fashion_island_2018.jpg" alt="perry and sable at fashion island">
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+
+  <p>Sable and Perry playing and singing at Fashion Island in 2018.</p> </div>
+          </div>
+        </div>
+      </div>
+    </section>
         
 
     <!-- Footer -->
