--- a/index.html
+++ b/index.html
@@ -51,19 +51,6 @@
     </nav>
 
     <section>
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-10 offset-1.5 order-lg-1">
-                    <div class="p-5">
-                    <h2 class="display-4"><br />Upcoming Concert</h2>
-                    <img src="img/jor-poster.jpg" width="90%">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section>
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
@@ -168,8 +155,18 @@
       </div>
     </section>
     
-
-        
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-10 offset-1.5 order-lg-1">
+                    <div class="p-5">
+                    <h3 class="display-4"><br />Jamming Out 2019</h3>
+                    <img src="img/jor.jpg" width="90%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
