can never make up my mind

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">Klezmer!</h2>
-  <p>I play trombone with the South Coast Simcha Band! You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="_blank">Facebook</a><br /><br />We would <strong>love</strong> to play Klezmer for your simcha, bar mitzvah, or other temple event!</p> </div>
+  <p>I play trombone with the South Coast Simcha Band. You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="_blank">Facebook</a><br /><br />We would <strong>love</strong> to play Klezmer for your simcha, bar mitzvah, or other temple event!</p> </div>
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
           </div>
           <div class="col-lg-6">
             <div class="p-5">
-	      <p>Playing acoustic guitar at the beach.</p>
+	      <p>Playing acoustic guitar and singing with Nancy Linder.</p>
             </div>
           </div>
         </div>
