make mobile happy

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="Personal website for Sable Cantus">
+<meta name="author" content="Sable Cantus">
+
 <title>Sable Cantus</title>
 <!--
     This repo is mostly a place to store random pages.
@@ -12,12 +16,12 @@
 	body {
 		background-color: #000;
 		margin: 1em 5em;
-		padding-left: 5em;
+		width: 80%;
 	}
 	#console {
 		font-family: courier, monospace;
 		color: #fff;
-		width:750px;
+		#width:750px;
 		margin-left:auto;
 		margin-right:auto;
 		margin-top:100px;
@@ -44,15 +48,21 @@
 <p><span id="c">$ </span>
     cat home.txt<br />
     <br />
-    This is the homepage for Sable Cantus.
+    Hi, I'm Sable Cantus.
+</p>
+<p>
+    I'm a <a href="https://cantus.us/music.html" target="_blank">musician</a>,
+    coder, gamer, hiker, raspberry pi enthusiast, and have my
+    <a href="https://cantus.us/certs.html" target="_blank">CISSP</a>.
 </p>
 <p>
     I post <a href='https://twitter.com/sablecantus' target="_blank">on 
-        twitter</a> occasionally. I put some things on 
+        twitter</a> occasionally. I put some projects on 
         <a href="https://github.com/sc137" target=_blank>Github</a> as well.
 </p>
 <p>
-    Looking for <a href="http://sc137.github.io/tippy/" target="_blank">Tippy?</a>
+    Are you looking for Tippy the mobile tipping app? 
+    <a href="http://sc137.github.io/tippy/" target="_blank">Click or touch here.</a>
 </p>
 <p>
     /sable
@@ -61,7 +71,7 @@
 <br />
 <br />
 <p>
-    <em><span id="c">$ </span>curl https://cantus.us/public.key</em>
+    <small><em><span id="c">$ </span>curl https://cantus.us/public.key</em></small>
 </p>
 
 </body>
