--- a/music.html
+++ b/music.html
@@ -33,6 +33,7 @@
         </button> -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
+<!--
             <li class="nav-item">
               <a class="nav-link" href="#"> </a><a href="https://twitter.com/sablecantus" target="_blank"><img src="img/twitter.png" alt="twitter logo" height="30" style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a>
             &nbsp;&nbsp;
@@ -45,6 +46,7 @@
             <li class="nav-item">
 			  <a class="nav-link" href="#"></a> <a href="https://theindispensableshow.com/" target="_blank"><img src="img/tis_logo.png" alt="podcast logo" height="30" style="-webkit-filter: grayscale(100%);filter: grayscale(100%);"></a>
             </li>
+-->
           </ul>
         </div>
       </div>
@@ -61,7 +63,7 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">About</h2>
-	      <p>I am a musician in Orange County, CA. You can find me playing guitar, trombone, working on podcasts, parody songs, demo recordings, or other creative projects.</p>
+	      <p>Sable is musician in Orange County, CA. You can find me playing guitar, trombone, working on podcasts, parody songs, demo recordings, or other creative projects.</p>
             </div>
           </div>
         </div>
@@ -97,7 +99,7 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">Klezmer!</h2>
-  <p>I play trombone with the South Coast Simcha Band. You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="_blank">Facebook</a><br /><br />We would <strong>love</strong> to play Klezmer for your simcha, bar mitzvah, or other temple event!</p> </div>
+  <p>Sable plays trombone and sings yiddish/hebrew with the South Coast Simcha Band. You can hear us at local city concerts in and around Los Angeles and Orange Count. Check us out on <a href="https://www.facebook.com/simchaband/" target="_blank">Facebook</a><br /><br />We would <strong>love</strong> to play Klezmer for your simcha, bar mitzvah, or other temple event!</p> </div>
           </div>
         </div>
       </div>
@@ -114,7 +116,7 @@
           <div class="col-lg-6">
             <div class="p-5">
               <h2 class="display-4">Sarcastic Ladyland</h2>
-	      <p>Please check out some of my parody work <a href="https://sablecantus.bandcamp.com/album/sarcastic-ladyland" target="_blank">on bandcamp</a> </p>
+	      <p>Please check out some of our fine parody work <a href="https://sablecantus.bandcamp.com/album/sarcastic-ladyland" target="_blank">on bandcamp</a> </p>
             </div>
           </div>
         </div>
@@ -148,7 +150,7 @@
           </div>
           <div class="col-lg-6">
             <div class="p-5">
-	      <p>Playing acoustic guitar and singing with Nancy Linder.</p>
+	      <p>Sable playing acoustic guitar and singing with Nancy Linder.</p>
             </div>
           </div>
         </div>
