footer, copyright, blah blah

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 	#b {
 		color: #ff0096;
 	}
+    footer {
+        width: 100%;
+        bottom: 1em;
+        position: fixed;
+    }
 </style> 
 </head>
 
@@ -52,6 +57,7 @@
 </p>
 <p>
     I'm a <a href="https://cantus.us/music.html" target="_blank">musician</a>,
+    <a href="https://www.theindispensableshow.com" target=_blank>podcaster</a>, 
     coder, gamer, hiker, raspberry pi enthusiast, and have my
     <a href="https://cantus.us/certs.html" target="_blank">CISSP</a>.
 </p>
@@ -67,12 +73,13 @@
 <p>
     /sable
 </p>
-<br />
-<br />
-<br />
-<p>
-    <small><em><span id="c">$ </span>curl https://cantus.us/public.key</em></small>
-</p>
 
+<footer>
+    <small><br />
+    &nbsp; &copy;2019 All Rights Reserved.
+    <br />
+    <span id="c">$ </span>curl https://cantus.us/public.key
+    </small>
+</footer>
 </body>
 </html>
