--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <p>
     I'm a <a href="https://cantus.us/music.html" target="_blank">musician</a>,
     <a href="https://www.theindispensableshow.com" target=_blank>podcaster</a>, 
-    coder, gamer, hiker, raspberry pi enthusiast, and have my
-    <a href="https://cantus.us/certs.html" target="_blank">CISSP</a>.
+    coder, gamer, hiker, college teacher, raspberry pi enthusiast, and
+    <a href="https://cantus.us/certs.html" target="_blank">IT security</a>.
 </p>
 <p>
     I post <a href='https://twitter.com/sablecantus' target="_blank">on 
