--- a/certs.html
+++ b/certs.html
@@ -30,11 +30,22 @@
 <li>(ISC)2</li>
 </ul>
 <p><a href="https://www.youracclaim.com/badges/b95d6824-708f-4617-9473-8f80d5c67cde/public_url" target="__blank"><img src="img/CISSP-logo-2lines.jpg" width=250px></a></p>
+
+<h3>Amazon Web Services (AWS)</h3>
+<ul>
+    <li>Cloud Support Engineer - AWS Digital Credential<br />
+    <img src="img/cloud-supp-eng.png" alt="cloud-supp-eng" width="175" ></li>
+    <li>Cloud Computing 101 - AWS Digital Credential<br />
+    <img src="img/cloud-computing-101.png" alt="cloud-computing-101" width="175"></li>
+</ul> 
+
+
 <h3 id="certificate-of-completion-devsecops-integrating-security-into-devops">Certificate of Completion: DevSecOps Integrating Security Into DevOps</h3>
 <ul>
 <li>1/31/2019</li>
 <li>(ISC)2 - 5 CPE</li>
 </ul>
+
 <h3 id="understanding-cisco-cybersecurity-operations">Understanding Cisco Cybersecurity Operations</h3>
 <ul>
 <li>100 hours</li>
