adding cyber spec

--- a/certs.html
+++ b/certs.html
@@ -32,6 +32,8 @@
 
 <h3>Amazon Web Services (AWS)</h3>
 <ul>
+    <li>Cyber Security Specialist - AWS Digital Credential<br />
+    <img src="img/cybersecurity-specialist.png" alt="cloud-supp-eng" width="175" ></li>
     <li>Cloud Support Engineer - AWS Digital Credential<br />
     <img src="img/cloud-supp-eng.png" alt="cloud-supp-eng" width="175" ></li>
     <li>Cloud Computing 101 - AWS Digital Credential<br />
