--- a/certs.html
+++ b/certs.html
@@ -30,6 +30,16 @@
 </ul>
 <p><a href="https://www.youracclaim.com/badges/b95d6824-708f-4617-9473-8f80d5c67cde/public_url" target="__blank"><img src="img/CISSP-logo-2lines.jpg" width=250px></a></p>
 
+<h3>Amazon Web Services (AWS) Certified Cloud Practitioner</h3>
+<ul>
+    <li>6/29/2019</li>
+</ul>
+
+<a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&t=c&d=2019-06-29&ci=AWS00960970" 
+    target="_blank">
+        <img src="img/accp.png" width="150"></a>
+
+
 <h3>Amazon Web Services (AWS)</h3>
 <ul>
     <li>Cloud Architect - Cyber Security Specialist - AWS Digital Credential<br />
