linking to gists

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <p>
     I post <a href='https://twitter.com/sablecantus' target="_blank">on 
         twitter</a> occasionally. I put some projects on 
-        <a href="https://github.com/sc137" target=_blank>Github</a> as well.
+        <a href="https://github.com/sc137" target=_blank>Github</a>, or small code samples (gists) <a href="https://gist.github.com/sc137" target="__blank">here</a>. as well.
 </p>
 <p>
     Are you looking for Tippy the mobile tipping app? 
