updating aws certs

--- a/certs.html
+++ b/certs.html
@@ -30,26 +30,37 @@
 </ul>
 <p><a href="https://www.youracclaim.com/badges/b95d6824-708f-4617-9473-8f80d5c67cde/public_url" target="__blank"><img src="img/CISSP-logo-2lines.jpg" width=250px></a></p>
 
-<h3>Amazon Web Services (AWS) Certified Cloud Practitioner</h3>
+<!-- <img src="img/aws-certified-logo_color-horz_360x60.jpg" width=200><br /> -->
+
+
+<h3>Amazon Web Services (AWS) Certifications</h3>
 <ul>
-    <li>6/29/2019</li>
+    <li><strong>Amazon Web Services (AWS) Solutions Architect Associate</strong> - August 2019</li>
+    <li><strong>Amazon Web Services (AWS) Certified Cloud Practitioner</strong> - June 2019</li>
 </ul>
 
 <a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&t=c&d=2019-06-29&ci=AWS00960970" 
     target="_blank">
         <img src="img/accp.png" width="150"></a>
 
+<a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=1&t=c&d=2019-08-19&ci=AWS00960970" 
+    target="_blank">
+        <img src="img/aws-saa.png" width="150"></a>
 
-<h3>Amazon Web Services (AWS)</h3>
+
+<h3>Amazon Web Services (AWS Educate)</h3>
 <ul>
     <li>Cloud Architect - Cyber Security Specialist - AWS Digital Credential<br />
-    <img src="img/cybersecurity-specialist.png" alt="cloud-supp-eng" width="175" ></li>
+    </li>
     <li>Cloud Support Engineer - AWS Digital Credential<br />
-    <img src="img/cloud-supp-eng.png" alt="cloud-supp-eng" width="175" ></li>
+    </li>
     <li>Cloud Computing 101 - AWS Digital Credential<br />
-    <img src="img/cloud-computing-101.png" alt="cloud-computing-101" width="175"></li>
+    </li>
 </ul> 
 
+<img src="img/cybersecurity-specialist.png" alt="cloud-supp-eng" width="175" >
+<img src="img/cloud-supp-eng.png" alt="cloud-supp-eng" width="175" >
+<img src="img/cloud-computing-101.png" alt="cloud-computing-101" width="175">
 
 <h3 id="certificate-of-completion-devsecops-integrating-security-into-devops">Certificate of Completion: DevSecOps Integrating Security Into DevOps</h3>
 <ul>
