--- a/music.html
+++ b/music.html
@@ -169,6 +169,19 @@
             </div>
         </div>
     </section>
+	
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-10 offset-1.5 order-lg-1">
+                    <div class="p-5">
+                    <h3 class="display-4"><br />Cantor's Concert 2019</h3>
+                    <img src="img/2019concert.jpg" width="90%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
