--- a/lbcc/teaching/index.html
+++ b/lbcc/teaching/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-<title>Sable Cantus<title>
-<meta http-equiv="REFRESH" content="0;url=https://sc137.github.io/lbcc_teaching_demo2"></HEAD>
+<title>Sable Cantus</title>
+<meta http-equiv="REFRESH" content="0;url=https://sc137.github.io/lbcc-teaching-demo2"></HEAD>
 </HTML>
