--- a/index.html
+++ b/index.html
@@ -56,15 +56,13 @@
     Hi, I'm Sable Cantus.
 </p>
 <p>
-    I'm a <a href="https://cantus.us/music.html" target="_blank">musician</a>,
+    I'm a <a href="https://cantus.us/certs.html" target="_blank">security & cloud guy</a>, coder, <a href="https://cantus.us/music.html" target="_blank">musician</a>,
     <a href="https://www.theindispensableshow.com" target=_blank>podcaster</a>, 
-    coder, gamer, hiker, college teacher, raspberry pi enthusiast, and
-    <a href="https://cantus.us/certs.html" target="_blank">IT security</a>.
+     gamer, hiker, teacher, and an arduino and raspberry pi enthusiast.
 </p>
 <p>
-    I post <a href='https://twitter.com/sablecantus' target="_blank">on 
-        twitter</a> occasionally. I put some projects on 
-        <a href="https://github.com/sc137" target=_blank>Github</a>, or small code samples (gists) <a href="https://gist.github.com/sc137" target="__blank">here</a>. as well.
+    Check out some of my projects on 
+        <a href="https://github.com/sc137" target=_blank>Github</a>.  I have some gists <a href="https://gist.github.com/sc137" target="__blank">posted</a>. as well.
 </p>
 <p>
     Are you looking for Tippy the mobile tipping app? 
@@ -72,6 +70,7 @@
 </p>
 <p>
     /sable
+   <a href='https://twitter.com/sablecantus' target="_blank">@sablecantus</a>
 </p>
 
 <footer>
