adding a line br

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <a href="http://sc137.github.io/tippy/" target="_blank">Click or touch here.</a>
 </p>
 <p>
-    /sable
+    /sable <br/>
    <a href='https://twitter.com/sablecantus' target="_blank">@sablecantus</a>
 </p>
 
