--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
    <a href='https://twitter.com/sablecantus' target="_blank">@sablecantus</a>
 </p>
 
+<!-- Adding some links to course updates -->
+<br />
+
+<p>
+	=========================================<br/>
+	I have some updates for my students here: 
+</p>
+
+<ul>
+	<li><a href="https://cantus.us/dm110">GWC DM 110 updates</a></li>
+	<li><a href="https://cantus.us/lbcc">LBCC COSS 271 updates</a></li>
+</ul>
+<p>
+		=========================================<br/>
+	</p>
+
 <footer>
     <small><br />
     &nbsp; &copy;2019 All Rights Reserved.
