--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
 <p>
 	=========================================<br/>
-	I have some updates for my students here: 
+	Class updates are posted here: 
 </p>
 
 <ul>
-	<li><a href="https://cantus.us/dm110">GWC DM 110 updates</a></li>
-	<li><a href="https://cantus.us/lbcc">LBCC COSS 271 updates</a></li>
+	<li><a href="https://cantus.us/dm110/index.html">GWC DM 110 updates</a></li>
+	<li><a href="https://cantus.us/lbcc/index.html">LBCC COSS 271 updates</a></li>
 </ul>
 <p>
 		=========================================<br/>
@@ -91,7 +91,7 @@
 
 <footer>
     <small><br />
-    &nbsp; &copy;2019 All Rights Reserved.
+    &nbsp; &copy;2020 All Rights Reserved.
     <br />
     <span id="c">$ </span>curl https://cantus.us/public.key
     </small>
