inspired to change

--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 
 <title>Sable Cantus</title>
 <!--
-    This repo is mostly a place to store random pages.
-    Looking for to encrypt your tax docs?
-    https://cantus.us/posts/encrypt-tax-docs.html
+           _     _                        _             
+ ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___ 
+/ __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
+\__ \ (_| | |_) | |  __/ | (_| (_| | | | | |_| |_| \__ \
+|___/\__,_|_.__/|_|\___|  \___\__,_|_| |_|\__|\__,_|___/
+                                                        
      -->
 <style type="text/css"> 
 	body {
-		background-color: #000;
+		background-color: white;
 		margin: 1em 5em;
 		width: 80%;
 	}
 	#console {
 		font-family: courier, monospace;
-		color: #fff;
+		color: rgba(5, 5, 5, 0.97);
 		#width:750px;
 		margin-left:auto;
 		margin-right:auto;
@@ -51,43 +54,56 @@
 <body id=console>
 
 <p><span id="c">$ </span>
-    cat home.txt<br />
+    ./homepage.sh<br />
     <br />
-    Hi, I'm Sable Cantus.
+    Official Homepage<br />
+    =================<br />
+    <br />
+    Hi, I'm Sable
 </p>
 <p>
-    I'm a <a href="https://cantus.us/certs.html" target="_blank">security & cloud guy</a>, coder, <a href="https://cantus.us/music.html" target="_blank">musician</a>,
-    <a href="https://www.theindispensableshow.com" target=_blank>podcaster</a>, 
-     gamer, hiker, teacher, and an arduino and raspberry pi enthusiast.
-</p>
+    I have a few projects here on the internet. I enjoy playing guitar and trombone, <br />
+    coding, hiking, teaching, video games, board games, the raspberry pi, <br />
+    and so much more.
+    </p>
+<ul>
+    <li>
+        Take this to visit my  <a href="https://cantus.us/music.html" target="_blank">music page</a>
+        </li>
+    <li>
+        Take a look at my <a href="https://cantus.us/certs.html" target="_blank">security & cloud certifications</a>
+        </li>
+    <li>
+        I have an occasional <a href="https://www.theindispensableshow.com" target=_blank>podcast</a> 
+        </li>
+    <li>
+        Here is a fun d20 passphrase generator in python <a href="https://github.com/sc137/d20passphrase" target="_blank">at github</a>
+        </li>
+    <li>
+        I use python to track class email blasts <a href="https://github.com/sc137/python-send-email" target="_blank">class email blasts</a>
+        </li>
+    <li>
+        This script is to <a href="https://gist.github.com/sc137/f94436f89f4c1654c4ae4d8445112f31" target="_blank">'toot' to your mastodon instance.</a> 
+        </li>
+    <li><img src="img/tippy.png" width=10>
+        <a href="http://sc137.github.io/tippy/" target="_blank">Tippy is a single page HTML/JS tip calculator app for your phone</a>
+    </li>
+    <li>
+        Make presentations using <a href="https://github.com/sc137/reveal_pres_template" target="_blank">markdown/pandoc/reveal</a>
+    </li>
+    <li>
+        <a href="https://cantus.us/posts/encrypt-tax-docs.html" target="_blank">Encrypt your private documents before you send them over the internet.</a>
+    </li>
+</ul>
+
 <p>
-    Check out some of my projects on 
-        <a href="https://github.com/sc137" target=_blank>Github</a>.  I have some gists <a href="https://gist.github.com/sc137" target="__blank">posted</a>. as well.
+    Thanks for visiting.
 </p>
-<p>
-    Are you looking for Tippy the mobile tipping app? 
-    <a href="http://sc137.github.io/tippy/" target="_blank">Click or touch here.</a>
-</p>
+
 <p>
     /sable <br/>
    <a href='https://twitter.com/sablecantus' target="_blank">@sablecantus</a>
 </p>
-
-<!-- Adding some links to course updates -->
-<br />
-
-<!-- <p>
-	=========================================<br/>
-	Class updates are posted here:
-</p>
-
-<ul>
-	<li><a href="https://cantus.us/dm110/index.html">GWC DM 110 updates</a></li>
-	<li><a href="https://cantus.us/lbcc/index.html">LBCC COSS 271 updates</a></li>
-</ul>
-<p>
-		=========================================<br/>
-	</p> -->
 
 <footer>
     <small><br />
