--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 <meta name="author" content="Sable Cantus">
 
 <title>Sable Cantus</title>
-<!--
+<!-----------------------------------------------------
            _     _                        _             
  ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___ 
 / __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
 \__ \ (_| | |_) | |  __/ | (_| (_| | | | | |_| |_| \__ \
 |___/\__,_|_.__/|_|\___|  \___\__,_|_| |_|\__|\__,_|___/
                                                         
-     -->
+------------------------------------------------------>
 <style type="text/css"> 
 	body {
 		background-color: white;
-		margin: 1em 5em;
-		width: 80%;
+		margin: 1em 10em;
+		width: 70%;
 	}
 	#console {
 		font-family: courier, monospace;
@@ -34,6 +34,9 @@
 		color: #0bc;
 		text-decoration: none;
 	}
+	li {
+    	line-height: 1.3;
+	}
 	#a {
 		color: #0f0;
 	}
@@ -41,19 +44,21 @@
 		color: #0bc;
 	}
 	#b {
-		color: #ff0096;
+		color: red;
 	}
     footer {
         width: 100%;
-        bottom: 1em;
+        bottom: 0;
         position: fixed;
+        background-color: white;
+        padding-bottom: 5px;
     }
 </style> 
 </head>
 
 <body id=console>
 
-<p><span id="c">$ </span>
+<p><span id="b">$ </span>
     ./homepage.sh<br />
     <br />
     Official Homepage<br />
@@ -62,37 +67,55 @@
     Hi, I'm Sable
 </p>
 <p>
-    I have a few projects here on the internet. I enjoy playing guitar and trombone, <br />
-    coding, hiking, teaching, video games, board games, the raspberry pi, <br />
+    I have a few projects here on the internet. 
+    
+    I enjoy playing guitar and trombone, coding, hiking, teaching, video games, 
+    board games, the raspberry pi,
     and so much more.
     </p>
 <ul>
     <li>
-        Take this to visit my  <a href="https://cantus.us/music.html" target="_blank">music page</a>
+        Take this to visit my  <a href="https://cantus.us/music.html" 
+            target="_blank">music page</a>
         </li>
     <li>
-        Take a look at my <a href="https://cantus.us/certs.html" target="_blank">security & cloud certifications</a>
+        Take a look at my <a href="https://cantus.us/certs.html" 
+            target="_blank">security & cloud certifications</a>
         </li>
     <li>
-        I have an occasional <a href="https://www.theindispensableshow.com" target=_blank>podcast</a> 
+        I have an occasional <a href="https://www.theindispensableshow.com" 
+            target=_blank>podcast</a>
+            <img src="img/tis_logo_orig.png" height=15>
         </li>
     <li>
-        Here is a fun d20 passphrase generator in python <a href="https://github.com/sc137/d20passphrase" target="_blank">at github</a>
+        Here is a fun d20 passphrase generator in python 
+        <a href="https://github.com/sc137/d20passphrase" target="_blank">
+            at github</a>
         </li>
     <li>
-        I use python to track class email blasts <a href="https://github.com/sc137/python-send-email" target="_blank">class email blasts</a>
+        I use python to track class email blasts 
+        <a href="https://github.com/sc137/python-send-email" 
+            target="_blank">class email blasts</a>
         </li>
     <li>
-        This script is to <a href="https://gist.github.com/sc137/f94436f89f4c1654c4ae4d8445112f31" target="_blank">'toot' to your mastodon instance.</a> 
+        This script is to 
+        <a href="https://gist.github.com/sc137/f94436f89f4c1654c4ae4d8445112f31" 
+            target="_blank">'toot' to your mastodon instance.</a> 
         </li>
-    <li><img src="img/tippy.png" width=10>
-        <a href="http://sc137.github.io/tippy/" target="_blank">Tippy is a single page HTML/JS tip calculator app for your phone</a>
+    <li><img src="img/tippy.png" height=15>
+        Tippy is a single page HTML/JS
+        <a href="http://sc137.github.io/tippy/" target="_blank">
+            tip calculator app for your phone</a>
     </li>
     <li>
-        Make presentations using <a href="https://github.com/sc137/reveal_pres_template" target="_blank">markdown/pandoc/reveal</a>
+        Make presentations using 
+        <a href="https://github.com/sc137/reveal_pres_template" 
+            target="_blank">markdown/pandoc/reveal</a>
     </li>
     <li>
-        <a href="https://cantus.us/posts/encrypt-tax-docs.html" target="_blank">Encrypt your private documents before you send them over the internet.</a>
+        <a href="https://cantus.us/posts/encrypt-tax-docs.html" 
+            target="_blank">Encrypt your private documents before you send them 
+                over the internet.</a>
     </li>
 </ul>
 
@@ -105,11 +128,13 @@
    <a href='https://twitter.com/sablecantus' target="_blank">@sablecantus</a>
 </p>
 
+<br /><br /><br />
+
 <footer>
     <small><br />
     &nbsp; &copy;2020 All Rights Reserved.
     <br />
-    <span id="c">$ </span>curl https://cantus.us/public.key
+    <span id="b">$ </span>curl https://cantus.us/public.key
     </small>
 </footer>
 </body>
