adding the dodecahedron

--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
             <img src="img/tis_logo_orig.png" height=15>
         </li>
     <li>
-        Here is a fun d20 passphrase generator in python 
+        Here is a fun d20 
+        <img src="img/Purple_d20.png" height=15> 
         <a href="https://github.com/sc137/d20passphrase" target="_blank">
-            at github</a>
+            passphrase generator in python</a>
         </li>
     <li>
         I use python to track class email blasts 
