--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="Personal website for Sable Cantus">
+<meta name="description" content="Official Homepage - Sable Cantus">
 <meta name="author" content="Sable Cantus">
 
-<title>Sable Cantus</title>
+<title>Cantus.us - Official Homepage</title>
 <!-----------------------------------------------------
            _     _                        _             
  ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___ 
