--- a/certs.html
+++ b/certs.html
@@ -5,170 +5,247 @@
   <meta name="description" content="Personal website for Sable Cantus">
   <meta name="author" content="Sable Cantus">
   <meta http-equiv="Content-Style-Type" content="text/css" />
+  <link rel="stylesheet" href="https://newcss.net/new.min.css">
   <title>Cantus.us - Certifications</title>
-  <style type="text/css">
-	  code {
-		  white-space: pre;
-	  }
-      img {
-          padding: 5px;
-      }
-      h1 {
-      }
-  </style>
   <link rel="stylesheet" href="css/template.css" />
 </head>
-<body>
-    <div class="container">
-    <div class="row">
-            <div class="span12">
-<h1 id="my-recent-training-and-certificates">My Recent Training and Certificates</h1>
-<hr />
-<h3 id="certified-information-systems-security-professional-cissp">Certified Information Systems Security Professional (CISSP)</h3>
-<ul>
-<li>7/3/2018 #657467</li>
-<li>(ISC)2</li>
-</ul>
-<p><a href="https://www.youracclaim.com/badges/b95d6824-708f-4617-9473-8f80d5c67cde/public_url" target="__blank"><img src="img/CISSP-logo-2lines.jpg" width=250px></a></p>
 
-<!-- <img src="img/aws-certified-logo_color-horz_360x60.jpg" width=200><br /> -->
-
-<h3>Comptia Security+</h3>
+<h1 id="my-recent-training-and-certificates">
+	Professional Training and Certifications
+</h1>
+<hr>
+<h3 id="certified-information-systems-security-professional-cissp">
+	Certified Information Systems Security Professional (CISSP)
+</h3>
 <ul>
-	<li>Obtained 7/7/2020</li>
+	<li>7/3/2018 #657467
+	</li>
+	<li>(ISC)2
+	</li>
+</ul>
+<p>
+	<a href="https://www.youracclaim.com/badges/b95d6824-708f-4617-9473-8f80d5c67cde/public_url" 
+	target="__blank"><img src="img/CISSP-logo-2lines.jpg" width="350px"></a>
+</p>
+<h3>
+	CompTIA Security+
+</h3><a href="https://www.youracclaim.com/badges/99757ccf-17eb-44c4-bcf3-d51d498b851c/public_url" 
+target="_blank"><img src="img/SecurityPlus.png" width="150"></a>
+<h3>
+	Amazon Web Services (AWS) Certifications
+</h3>
+<ul>
+	<li>
+		<strong>Amazon Web Services (AWS) Solutions Architect Associate</strong> 
+		- August 2019
+	</li>
+	<li>
+		<strong>Amazon Web Services (AWS) Certified Cloud Practitioner</strong> 
+		- June 2019
+	</li>
+</ul><a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&amp;t=c&amp;d=2019-06-29&amp;ci=AWS00960970" 
+target="_blank"><img src="img/accp.png" width="150"></a> 
+<a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=1&amp;t=c&amp;d=2019-08-19&amp;ci=AWS00960970" 
+target="_blank"><img src="img/aws-saa.png" width="150"></a>
+<h3>
+	Amazon Web Services (AWS Educate)
+</h3>
+<ul>
+	<li>Cloud Architect - Cyber Security Specialist - AWS Digital Credential<br>
+	</li>
+	<li>Cloud Support Engineer - AWS Digital Credential<br>
+	</li>
+	<li>Cloud Computing 101 - AWS Digital Credential<br>
+	</li>
+</ul>
+<p>
+	<img src="img/cybersecurity-specialist.png" alt="cloud-supp-eng" width="175">
+	 <img src="img/cloud-supp-eng.png" alt="cloud-supp-eng" width="175">
+	  <img src="img/cloud-computing-101.png" alt="cloud-computing-101" width="175">
+</p>
+<h3 id="certificate-of-completion-devsecops-integrating-security-into-devops">
+	Certificate of Completion: DevSecOps Integrating Security Into DevOps
+</h3>
+<ul>
+	<li>1/31/2019
+	</li>
+	<li>(ISC)2 - 5 CPE
+	</li>
+</ul>
+<h3 id="understanding-cisco-cybersecurity-operations">
+	Understanding Cisco Cybersecurity Operations
+</h3>
+<ul>
+	<li>100 hours
+	</li>
+	<li>Certificate of Completion
+	</li>
+	<li>July 2018
+	</li>
+</ul>
+<h3 id="cisco-networking-academy-connecting-things">
+	Cisco Networking Academy Connecting Things
+</h3>
+<ul>
+	<li>Certificate of Completion, Certified Instructor
+	</li>
+	<li>June 2018
+	</li>
+	<li>36 hours
+	</li>
+</ul>
+<h3 id="understanding-cisco-cybersecurity-fundamentals">
+	Understanding Cisco Cybersecurity Fundamentals
+</h3>
+<ul>
+	<li>100 hours
+	</li>
+	<li>Certificate of Completion
+	</li>
+	<li>May 2018
+	</li>
+</ul>
+<h3 id="bie-project-based-learning">
+	BIE Project Based Learning
+</h3>
+<ul>
+	<li>21 hours
+	</li>
+	<li>August 2017
+	</li>
+</ul>
+<h3 id="wastc-faculty-development-certified-ethical-hacker">
+	WASTC Faculty Development: Certified Ethical Hacker
+</h3>
+<ul>
+	<li>36 hours
+	</li>
+	<li>6/26/17 - 6/30/17
+	</li>
+</ul>
+<h3 id="apple-teacher---2016">
+	Apple Teacher - 2016
+</h3>
+<ul>
+	<li>Certificate
+	</li>
+</ul>
+<p>
+	<img src="img/apple.png" width="175px">
+</p>
+<h3 id="wastc-faculty-development-teaching-programming-fundamentals-using-python">
+	WASTC Faculty Development; Teaching Programming Fundamentals using Python
+</h3>
+<ul>
+	<li>36 hours
+	</li>
+	<li>6/20 - 6/24/2016
+	</li>
+</ul>
+<h3 id="solid-state-logic-aws-924-training">
+	Solid State Logic AWS 924 Training
+</h3>
+<ul>
+	<li>8 hours
+	</li>
+	<li>10/25/2016
+	</li>
+</ul>
+<h3 id="avid-sibelius-certified-instructor">
+	Avid Sibelius Certified Instructor
+</h3>
+<ul>
+	<li>3 days
+	</li>
+	<li>2/2016
+	</li>
+</ul>
+<p>
+	<img src="img/sib.jpg" width="175px">
+</p>
+<h3 id="pro-tools-100-certified-instructor">
+	Pro Tools 100 Certified Instructor
+</h3>
+<ul>
+	<li>5 days
+	</li>
+	<li>12/2015
+	</li>
+</ul>
+<p>
+	<img src="img/pt.jpg" width="175px">
+</p>
+<h3 id="on-course-i">
+	On Course I
+</h3>
+<ul>
+	<li>Certificate
+	</li>
+	<li>3 days
+	</li>
+	<li>8/15/2015
+	</li>
+</ul>
+<h3 id="adobe-certified-associate---visual-communication-using-adobe-photoshop">
+	Adobe Certified Associate - Visual Communication Using Adobe Photoshop
+</h3>
+<ul>
+	<li>Certificate
+	</li>
+	<li>3/8/15
+	</li>
+</ul>
+<p>
+	<img src="img/adobe-certified-associate-in-visual-communication-using-adobe-photoshop.png" width="125">
+</p>
+<h3 id="enhancing-basic-skills-across-the-curriculum">
+	Enhancing Basic Skills Across the Curriculum
+</h3>
+<ul>
+	<li>6 hours
+	</li>
+	<li>1/27/15
+	</li>
+</ul>
+<h3 id="designing-learner-centered-instruction">
+	Designing Learner Centered Instruction
+</h3>
+<ul>
+	<li>15 hours
+	</li>
+	<li>6/3 - 6/4/14
+	</li>
+</ul>
+<h3 id="teaching-engaging-students-in-cte-stem-careers-thru-gaming-a-minecraft-workshop">
+	Teaching & Engaging Students in CTE-STEM Careers thru Gaming: A Minecraft Workshop
+</h3>
+<ul>
+	<li>7 hours
+	</li>
+	<li>11/21/14
+	</li>
+</ul>
+<h3 id="oracle-apex-four-day-workshop">
+	Oracle APEX Four Day Workshop
+</h3>
+<ul>
+	<li>30 hours
+	</li>
+	<li>8/11/14 - 8/14/14
+	</li>
+</ul>
+<h3 id="cfa-the-unconscious-bias-program">
+	CFA The Unconscious Bias Program
+</h3>
+<ul>
+	<li>Certificate
+	</li>
+	<li>24 hours
+	</li>
+	<li>Modules 1 - 4: 1/17 - 1/18 2013
+	</li>
+	<li>Modules 5 - 6: 9/20/2013
+	</li>
 </ul>
 
-<h3>Amazon Web Services (AWS) Certifications</h3>
-<ul>
-    <li><strong>Amazon Web Services (AWS) Solutions Architect Associate</strong> - August 2019</li>
-    <li><strong>Amazon Web Services (AWS) Certified Cloud Practitioner</strong> - June 2019</li>
-</ul>
-
-<a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&t=c&d=2019-06-29&ci=AWS00960970" 
-    target="_blank">
-        <img src="img/accp.png" width="150"></a>
-
-<a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=1&t=c&d=2019-08-19&ci=AWS00960970" 
-    target="_blank">
-        <img src="img/aws-saa.png" width="150"></a>
-
-
-<h3>Amazon Web Services (AWS Educate)</h3>
-<ul>
-    <li>Cloud Architect - Cyber Security Specialist - AWS Digital Credential<br />
-    </li>
-    <li>Cloud Support Engineer - AWS Digital Credential<br />
-    </li>
-    <li>Cloud Computing 101 - AWS Digital Credential<br />
-    </li>
-</ul> 
-
-<img src="img/cybersecurity-specialist.png" alt="cloud-supp-eng" width="175" >
-<img src="img/cloud-supp-eng.png" alt="cloud-supp-eng" width="175" >
-<img src="img/cloud-computing-101.png" alt="cloud-computing-101" width="175">
-
-<h3 id="certificate-of-completion-devsecops-integrating-security-into-devops">Certificate of Completion: DevSecOps Integrating Security Into DevOps</h3>
-<ul>
-<li>1/31/2019</li>
-<li>(ISC)2 - 5 CPE</li>
-</ul>
-
-<h3 id="understanding-cisco-cybersecurity-operations">Understanding Cisco Cybersecurity Operations</h3>
-<ul>
-<li>100 hours</li>
-<li>Certificate of Completion</li>
-<li>July 2018</li>
-</ul>
-<h3 id="cisco-networking-academy-connecting-things">Cisco Networking Academy Connecting Things</h3>
-<ul>
-<li>Certificate of Completion, Certified Instructor</li>
-<li>June 2018</li>
-<li>36 hours</li>
-</ul>
-<h3 id="understanding-cisco-cybersecurity-fundamentals">Understanding Cisco Cybersecurity Fundamentals</h3>
-<ul>
-<li>100 hours</li>
-<li>Certificate of Completion</li>
-<li>May 2018</li>
-</ul>
-<h3 id="bie-project-based-learning">BIE Project Based Learning</h3>
-<ul>
-<li>21 hours</li>
-<li>August 2017</li>
-</ul>
-<h3 id="wastc-faculty-development-certified-ethical-hacker">WASTC Faculty Development: Certified Ethical Hacker</h3>
-<ul>
-<li>36 hours</li>
-<li>6/26/17 - 6/30/17</li>
-</ul>
-<h3 id="apple-teacher---2016">Apple Teacher - 2016</h3>
-<ul>
-<li>Certificate</li>
-</ul>
-<p><img src="img/apple.png" width=175px></p>
-<h3 id="wastc-faculty-development-teaching-programming-fundamentals-using-python">WASTC Faculty Development; Teaching Programming Fundamentals using Python</h3>
-<ul>
-<li>36 hours</li>
-<li>6/20 - 6/24/2016</li>
-</ul>
-<h3 id="solid-state-logic-aws-924-training">Solid State Logic AWS 924 Training</h3>
-<ul>
-<li>8 hours</li>
-<li>10/25/2016</li>
-</ul>
-<h3 id="avid-sibelius-certified-instructor">Avid Sibelius Certified Instructor</h3>
-<ul>
-<li>3 days</li>
-<li>2/2016</li>
-</ul>
-<p><img src="img/sib.jpg" width=175px></p>
-<h3 id="pro-tools-100-certified-instructor">Pro Tools 100 Certified Instructor</h3>
-<ul>
-<li>5 days</li>
-<li>12/2015</li>
-</ul>
-<p><img src="img/pt.jpg" width=175px></p>
-<h3 id="on-course-i">On Course I</h3>
-<ul>
-<li>Certificate</li>
-<li>3 days</li>
-<li>8/15/2015</li>
-</ul>
-<h3 id="adobe-certified-associate---visual-communication-using-adobe-photoshop">Adobe Certified Associate - Visual Communication Using Adobe Photoshop</h3>
-<ul>
-<li>Certificate</li>
-<li>3/8/15</li>
-</ul>
-<p><img src="img/adobe-certified-associate-in-visual-communication-using-adobe-photoshop.png" width="125" /></p>
-<h3 id="enhancing-basic-skills-across-the-curriculum">Enhancing Basic Skills Across the Curriculum</h3>
-<ul>
-<li>6 hours</li>
-<li>1/27/15</li>
-</ul>
-<h3 id="designing-learner-centered-instruction">Designing Learner Centered Instruction</h3>
-<ul>
-<li>15 hours</li>
-<li>6/3 - 6/4/14</li>
-</ul>
-<h3 id="teaching-engaging-students-in-cte-stem-careers-thru-gaming-a-minecraft-workshop">Teaching &amp; Engaging Students in CTE-STEM Careers thru Gaming: A Minecraft Workshop</h3>
-<ul>
-<li>7 hours</li>
-<li>11/21/14</li>
-</ul>
-<h3 id="oracle-apex-four-day-workshop">Oracle APEX Four Day Workshop</h3>
-<ul>
-<li>30 hours</li>
-<li>8/11/14 - 8/14/14</li>
-</ul>
-<h3 id="cfa-the-unconscious-bias-program">CFA The Unconscious Bias Program</h3>
-<ul>
-<li>Certificate</li>
-<li>24 hours</li>
-<li>Modules 1 - 4: 1/17 - 1/18 2013</li>
-<li>Modules 5 - 6: 9/20/2013</li>
-</ul>
-            </div>
-    </div>
-  </div>
-</body>
 </html>
