--- a/certs.html
+++ b/certs.html
@@ -8,11 +8,18 @@
   <link rel="stylesheet" href="https://newcss.net/new.min.css">
   <title>Cantus.us - Certifications</title>
   <link rel="stylesheet" href="css/template.css" />
+  <style type="text/css">
+	  body {
+		  max-width: 70%;
+		  margin: auto;
+	  }
+	  </style>
 </head>
 
 <h1 id="my-recent-training-and-certificates">
 	Professional Training and Certifications
 </h1>
+<p>Sable Cantus</p>
 <hr>
 <h3 id="certified-information-systems-security-professional-cissp">
 	Certified Information Systems Security Professional (CISSP)
