--- a/checklist.html
+++ b/checklist.html
@@ -106,6 +106,8 @@ XLR 50’ cable from AUX 4 to XLR-stereo mini adapter</li>
 <li><input type="checkbox" disabled="" />
 XLR Male to Stereo Mini Adapter</li>
 <li><input type="checkbox" disabled="" />
+UNMUTE Aux 3 and 4</li>
+<li><input type="checkbox" disabled="" />
 OPTIONAL - Headphone splitter to monitor Stream Audio</li>
 <li><input type="checkbox" disabled="" />
 OPTIONAL - Headphones with 1/4" adapter for headphone splitter</li>
@@ -124,7 +126,7 @@ Ethernet from building into WAN port</li>
 <li><input type="checkbox" disabled="" />
 25’ Ethernet TO mixer from LAN port</li>
 <li><input type="checkbox" disabled="" />
-100’ Ethernet TO ATEM mini pro from LAN port</li>
+50’ Ethernet TO ATEM mini pro from LAN port</li>
 </ul>
 <h2 id="microphone---rabbi">Microphone - Rabbi</h2>
 <ul class="task-list">
@@ -177,6 +179,8 @@ Acoustic guitar into Channel 10</li>
 <li><input type="checkbox" disabled="" />
 All other instruments sequentially after</li>
 </ul>
+<h2 id="audio-for-choir-videos">Audio for Choir Videos</h2>
+<p>This section is not yet complete. We are not sure how the videos will be played yet. We have only played the Audio from choir videos.</p>
 <h2 id="extension-chords-and-power-strips">Extension Chords and Power Strips</h2>
 <p>Avoid daisy chaining power strips together. Try to run an extension cable to the building power for each extension cable.</p>
 <ul class="task-list">
