updated for choir videos

--- a/checklist.html
+++ b/checklist.html
@@ -180,7 +180,13 @@ Acoustic guitar into Channel 10</li>
 All other instruments sequentially after</li>
 </ul>
 <h2 id="audio-for-choir-videos">Audio for Choir Videos</h2>
-<p>This section is not yet complete. We are not sure how the videos will be played yet. We have only played the Audio from choir videos.</p>
+<p>In order for the live audience and the live stream to hear audio from pre-recorded videos, the sound must run through the mixer.</p>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Stereo mini to XLR MALE for laptop</li>
+<li><input type="checkbox" disabled="" />
+2 x 50’ XLR cables into open Mic channels</li>
+</ul>
 <h2 id="extension-chords-and-power-strips">Extension Chords and Power Strips</h2>
 <p>Avoid daisy chaining power strips together. Try to run an extension cable to the building power for each extension cable.</p>
 <ul class="task-list">
