--- a/video-checklist.html
+++ b/video-checklist.html
@@ -73,6 +73,8 @@ HDMI cable for external monitor</li>
 Stereo mini to XLR Male adapter</li>
 <li><input type="checkbox" disabled="" />
 2 x 50’ XLR Cable from Mixer Aux 3 and 4</li>
+<li><input type="checkbox" disabled="" />
+OPTIONAL: 4 port ethernet switch at table to connect laptop and atem</li>
 </ul>
 <h2 id="external-preview-monitor">External Preview Monitor</h2>
 <ul class="task-list">
@@ -146,6 +148,16 @@ Power cable</li>
 extension chord to base of camera</li>
 <li><input type="checkbox" disabled="" />
 HDMI cable</li>
+</ul>
+<h2 id="choir-videos">Choir Video’s</h2>
+<p>Pre-recorded choir videos will be played from the laptop connected to camera 3. In order for both the live audience and the live stream to receive audio, that audio must run through the p/a.</p>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+HDMI dual output box connected to both Camera 3 and the projector</li>
+<li><input type="checkbox" disabled="" />
+Stereo-mini to XLR Male connector</li>
+<li><input type="checkbox" disabled="" />
+2 x 50’ XLR cables to XAIR 16.</li>
 </ul>
 <h2 id="admin-laptop">Admin Laptop</h2>
 <p>This is an optional step used to control ATEM settings in addition to using the physical buttons on the box. Graphics must be uploaded via this software</p>
