remove broken links

--- a/certs.html
+++ b/certs.html
@@ -50,10 +50,8 @@ target="_blank"><img src="img/SecurityPlus.png" width="150"></a>
 		<strong>Amazon Web Services (AWS) Certified Cloud Practitioner</strong> 
 		- June 2019
 	</li>
-</ul><a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&amp;t=c&amp;d=2019-06-29&amp;ci=AWS00960970" 
-target="_blank"><img src="img/accp.png" width="150"></a> 
-<a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=1&amp;t=c&amp;d=2019-08-19&amp;ci=AWS00960970" 
-target="_blank"><img src="img/aws-saa.png" width="150"></a>
+</ul><img src="img/accp.png" width="150"> 
+<img src="img/aws-saa.png" width="150">
 <h3>
 	Amazon Web Services (AWS Educate)
 </h3>
